# whisper.cpp

./: CMakeLists.txt  whisper.cpp
swig/: CMakeLists.txt  whisper.i
